Try build tests in maven